# Phantom

./: CMakeLists.txt  README.md  RunGun.cc  phantom.mac  vis.mac
AnalysisTools/: EdepInOrgan1.C  myatten.C  myatten1.C  mycheck_file.C  myrec.C  myrec1.C  mytest1.C  mytest10.C  mytest2.C  mytest21.C  mytest22.C  mytest222.C  mytest23.C  mytest3.C  mytest4.C  mytest5.C  mytest6.C  mytest7.C  mytest8.C  mytest9.C  shield.C  tt.C  ttt.C
data/: GCR_372_51.6.txt  GCR_372_96.8.txt  GCR_420_96.8.txt  bias.txt  spectrum_GCR_maximum.txt  spectrum_GCR_maximum_H.txt  spectrum_GCR_maximum_He.txt  spectrum_GCR_minimum.txt  spectrum_GCR_minimum_C.txt  spectrum_GCR_minimum_C_diff.txt  spectrum_GCR_minimum_C_diff1.txt  spectrum_GCR_minimum_Fe.txt  spectrum_GCR_minimum_Fe_diff.txt  spectrum_GCR_minimum_Fe_diff1.txt  spectrum_GCR_minimum_H.txt  spectrum_GCR_minimum_H_diff.txt  spectrum_GCR_minimum_He.txt  spectrum_GCR_minimum_He_diff.txt  spectrum_GCR_minimum_He_diff1.txt  spectrum_GCR_minimum_Li.txt  spectrum_GCR_minimum_Li_diff.txt  spectrum_GCR_minimum_O.txt  spectrum_GCR_minimum_O_diff.txt  spectrum_GCR_minimum_O_diff1.txt  spectrum_GCR_minimum_diff.txt  spectrum_trapped_electrons.txt  spectrum_trapped_electrons_max.txt  spectrum_trapped_electrons_max_diff.txt  spectrum_trapped_electrons_min.txt  spectrum_trapped_electrons_min_diff.txt  spectrum_trapped_protons_max.txt  spectrum_trapped_protons_max_1Mev_diff.txt  spectrum_trapped_protons_max_diff.txt  spectrum_trapped_protons_min.txt  spectrum_trapped_protons_min_10Mev_diff.txt  spectrum_trapped_protons_min_1Mev_diff.txt  spectrum_trapped_protons_min_diff.txt  spenvis_GCR_C_2010_350km_51.6degree_min_diff.txt  spenvis_GCR_C_2010_350km_51.6degree_min_integral.txt  spenvis_GCR_C_2010_350km_98degree_min_diff.txt  (+101 more)
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstruction.hh_cluster  DetectorConstruction.hh_fian_man  DetectorConstruction.hh_fian_old  DetectorMessenger.hh  EventAction.hh  G4HumanPhantomMaterial.hh  Materials.hh  MyRunAction.hh  MyTrackingAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  TETModelImport.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.cc.save  DetectorConstruction.cc_cluster  DetectorConstruction.cc_fian_man  DetectorConstruction.cc_fian_man_old  DetectorConstruction.cc_fian_old  DetectorConstruction.cc_imbp_dosimeters  DetectorConstruction.cc_old  DetectorConstruction.cc_test  DetectorMessenger.cc  EventAction.cc  G4HumanPhantomMaterial.cc  Materials.cc  MyRunAction.cc  MyTrackingAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SteppingAction.cc  TETModelImport.cc  TETPSEnergyDeposit.cc  TETParameterisation.cc
